# tree-sitter-qf

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  test.qf  tree-sitter.json
.github/workflows/: ci.yml
bindings/c/: tree-sitter-qf.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_qf/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterQF/: qf.h
bindings/swift/TreeSitterQFTests/: TreeSitterQFTests.swift
examples/: quickfix.qf
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: main.txt
